# bobbins

./: .gitignore  Dockerfile  README.md  example-config.json  pyproject.toml
.github/workflows/: workflow.yaml
bobbins/: __main__.py  bot.py  checks.py  cli.py  config.py  database.py  exceptions.py  history.py  plugin.py  plugin_posts.py  plugin_recent_posts.py  post_commands.py
k8s/: bot.yaml
